Added minified version

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p class=smaller><a herf="http://codepen.io/2kool2">Pens by Mike Foskett</a> &mdash; <a href="https://websemantics.uk/">webSemantics</a></p>
 
 
-<script src="js/script.js"></script>
+<script src="js/gif-late-load.1.0.js"></script>
 
 </body>
 </html>
