--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 <p>Improves initial page-load performance, and helps meet <abbr title="Web Content Accessibility Guidelines">WCAG</abbr> 2 level AA.</p>
 
 <div class=container>
-  <img src="http://www.tesco.com/baking/2016/i/battenberg.jpg"
-       data-gif="http://www.tesco.com/baking/2016/i/battenberg.gif"
-       alt="Week 1 Challenge - Battenberg Cake">
+  <img class=img
+       src="img/static.jpg"
+       data-gif="img/animated.gif"
+       alt="Challah Bread">
 </div>
 
 <p>Initially load the static image (.jpg) then, once the page has fully loaded, swap it out for the (much) larger animated gif.</p>
